--- a/package.json
+++ b/package.json
@@ -11,10 +11,38 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
+    "@mantine/carousel": "^8.2.1",
+    "@mantine/charts": "^8.2.1",
+    "@mantine/code-highlight": "^8.2.1",
     "@mantine/core": "^8.2.1",
+    "@mantine/dates": "^8.2.1",
+    "@mantine/dropzone": "^8.2.1",
+    "@mantine/form": "^8.2.1",
     "@mantine/hooks": "^8.2.1",
+    "@mantine/modals": "^8.2.1",
+    "@mantine/notifications": "^8.2.1",
+    "@mantine/nprogress": "^8.2.1",
+    "@mantine/spotlight": "^8.2.1",
+    "@mantine/tiptap": "^8.2.1",
+    "@tabler/icons-react": "^3.34.1",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.0.0",
+    "i18next": "^25.3.2",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-i18next": "^15.6.0",
+    "recharts": "^3.1.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
