--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.6.0",
     "recharts": "^3.1.0"
   },
