--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@mantine/carousel": "^8.2.1",
     "@mantine/charts": "^8.2.1",
     "@mantine/code-highlight": "^8.2.1",
