--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "framer-motion": "^12.23.6",
     "i18next": "^25.3.2",
     "next": "15.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.6.0",
     "recharts": "^3.1.0"
