--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "i18next": "^25.3.2",
     "next": "15.4.2",
     "react": "^18.3.1",
